chore: update assignees and user references in workflow files

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -17,7 +17,7 @@ jobs:
     name: Publish dev image
     uses: ./.github/workflows/image.yml
     with:
-      user: jontze
+      user: ${{ github.repository_owner }}
       push: true
       cache_tag: develop
     secrets: inherit
