--- a/.github/workflows/main-helm.yml
+++ b/.github/workflows/main-helm.yml
@@ -12,7 +12,7 @@ permissions:
   packages: write
 
 env:
-  OCI_MANIFESTS_BASE_URL: "oci://ghcr.io/jontze/manifests"
+  OCI_MANIFESTS_BASE_URL: "oci://ghcr.io/${{ github.repository_owner }}/manifests"
   OCI_MANIFESTS_PATH: "./helm/cadency"
 
 jobs:
