feat: add graceful shutdown handling with ctrlc integration

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,3 +41,6 @@ features = ["rustls-tls", "json"]
 [workspace.dependencies.symphonia]
 version = "0.5.5"
 features = ["all-formats"]
+
+[workspace.dependencies.ctrlc]
+version = "3"
