--- a/cadency_core/Cargo.toml
+++ b/cadency_core/Cargo.toml
@@ -15,3 +15,4 @@ reqwest = { workspace = true }
 thiserror = { workspace = true }
 derive_builder = { workspace = true }
 symphonia = { workspace = true }
+ctrlc = { workspace = true }
