--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,4 +43,5 @@ version = "0.5.5"
 features = ["all-formats"]
 
 [workspace.dependencies.ctrlc]
-version = "3"
+version = "3.5.1"
+features = ["termination"]
