--- a/cadency_commands/Cargo.toml
+++ b/cadency_commands/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.7.0"
 edition = "2021"
 description = "Library with a collection of some commands for the cadency discord bot"
 license = "MIT"
-repository = "https://github.com/jontze/cadency-rs"
+repository = "https://github.com/BananikXenos/cadency-rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
