--- a/helm/cadency/Chart.yaml
+++ b/helm/cadency/Chart.yaml
@@ -5,7 +5,7 @@ version: 0.2.1
 appVersion: "0.5.1"
 type: application
 maintainers:
-  - name: Jontze
+  - name: BananikXenos
 sources:
-  - "https://github.com/jontze/cadency-rs"
-home: https://github.com/jontze/cadency-rs
+  - "https://github.com/BananikXenos/cadency-rs"
+home: https://github.com/BananikXenos/cadency-rs
